# foraskhadra_ai_chatbot

./: README.md
backend/: main.py  pyproject.toml
backend/agent/: agent.py  chatbot.py  config.py  engine.py
backend/chroma_storage/: chroma.sqlite3
backend/data/: main_llm_node_sys_prompt.txt  opportunities.json  opportunities_2.json  opportunities_ar.json  opportunities_en.json  system_prompt.txt
backend/db/: init_db.py  models.py  schemas.py  sessions.py
backend/routers/: agent_router.py  auth.py  opportunities.py
backend/services/: agent_service.py
backend/static/: .gitkeep
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chatbot/: page.tsx
frontend/app/components/: footer.tsx  header.tsx
frontend/app/context/: language-context.tsx
frontend/app/opportunities/: page.tsx
frontend/app/opportunities/[id]/: page.tsx
frontend/components/chatbot/: ChatMessage.tsx  OpportunityCard.tsx
frontend/types/: chat.ts
