[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.138.0",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langdetect>=1.0.9",
    "langgraph>=1.2.6",
    "lingua-language-detector>=2.2.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pykernel>=0.1.6",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
